@@ -659,6 +659,9 @@ Extra-source-files:
                        test/syntax001/run
                        test/syntax001/*.idr
                        test/syntax001/expected
+                       test/syntax002/run
+                       test/syntax002/*.idr
+                       test/syntax002/expected
 
                        test/tactics001/run
                        test/tactics001/*.idr
