@@ -369,6 +369,7 @@ instance NFData SynContext where
 
 instance NFData Syntax where
         rnf (Rule x1 x2 x3) = rnf x1 `seq` rnf x2 `seq` rnf x3 `seq` ()
+        rnf (DeclRule x1 x2) = rnf x1 `seq` rnf x2 `seq` ()
 
 instance NFData SSymbol where
         rnf (Keyword x1) = rnf x1 `seq` ()
