@@ -1,0 +1,4 @@
+#!/usr/bin/env bash
+idris $@ syntax002.idr -o syntax002
+./syntax002
+rm -f syntax002 *.ibc
